#
# Copyright (c) 2001,02,03 Bernd Walter Computer Technology
# All rights reserved.
#
# $URL$
# $Date$
# $Author$
# $Rev$
#

includedir =		$(DESTDIR)$(prefix)/include/bwctmb
bin_SCRIPTS =		libbwctmb-config
EXTRA_DIST =		INSTALL \
			libbwctmb.m4
lib_LIBRARIES =		libbwctmb.a
include_HEADERS =	bwctmb/bwctmb.h
libbwctmb_a_SOURCES =	bwctmb/bwctmb.cc
m4datadir =		$(datadir)/aclocal
m4data_DATA =		libbwctmb.m4

all-local:
	@echo "*** Everything completed ***"

